<resources>
    <string name="app_name" translatable="false">Mind plus</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="correo_electronico">Email</string>
    <string name="contrasena">Password</string>
    <string name="username">Username</string>
    <string name="ir_login">Do you have an account? Sign In!</string>
    <string name="registrate">Sign Up</string>
    <string name="bienvenido">Welcome %s</string>
    <string name="ir_registro">Don\'t Have Account? Sign Up!</string>
    <string name="inicia_sesion">Sign In</string>
    <string name="registra">Register</string>
    <string name="sugiere">Suggest</string>
    <string name="historial">Record</string>
    <string name="sugiere_actividad">Suggest a new activity</string>
    <string name="nombre_actividad">Name of activity</string>
    <string name="descripcion_actividad">Description of activity</string>
    <string name="coleccion_usuario" translatable="false">Usuarios</string>
    <string name="label_registra_emocion">Register a emotion</string>
    <string name="registra_emocion">It\'s a good time to let us know how you feel</string>
    <string name="como_te_sientes">How do you feel?</string>
    <string name="label_historial">Record history</string>
    <string name="label_sugiere">Suggest an activity</string>
    <string name="tu_emocion">You feel</string>
    <string name="te_recomendamos">We recommend you</string>
    <string name="coleccion_actividad" translatable="false">Actividades</string>
    <string name="label_escoge_actividad">Choose an activity</string>
    <string name="sigue_asi">To keep it that way!</string>
    <string name="coleccion_registro" translatable="false">Registros</string>
    <string name="debe_escoger_actividad">You have to choose an activity</string>
    <string name="guardar">Save</string>
    <string name="coleccion_sugerencia" translatable="false">Sugerencias</string>
    <string name="obligatorio">Required</string>
    <string name="tus_registros">Your record</string>
    <string name="califica_actividad">Rate your last activity</string>
    <string name="califica_actividad_dialog">Rate the last activity that we recommended you</string>
</resources>
