<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".EscogeActividadFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tu_emocion"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" android:id="@+id/textView5" android:textSize="30sp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/imagen_actividad"/>

    <ImageView android:layout_width="128dp" android:layout_height="128dp"
               app:layout_constraintStart_toStartOf="@+id/textView5"
               app:layout_constraintEnd_toEndOf="@+id/textView5" android:layout_marginTop="8dp"
               app:layout_constraintTop_toBottomOf="@+id/textView5" android:id="@+id/imagen_actividad"
               app:layout_constraintBottom_toTopOf="@+id/textView6"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/te_recomendamos"
            app:layout_constraintTop_toBottomOf="@+id/imagen_actividad"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="@+id/textView5" android:id="@+id/textView6"
            android:layout_marginTop="8dp" android:textSize="24sp" android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/sp_actividades"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/sp_actividades"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="@+id/textView6" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guardar_registro"/>
    <TextView
            android:text="@string/sigue_asi"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/sigue_asi"
            app:layout_constraintStart_toStartOf="@+id/textView6" app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginTop="16dp"
            android:textSize="24sp"
            android:textAlignment="center" android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/guardar_registro"/>
    <Button
            android:text="@string/guardar"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guardar_registro"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView6" app:layout_constraintEnd_toEndOf="@+id/textView6"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/sigue_asi"/>

</androidx.constraintlayout.widget.ConstraintLayout>